# Misc_Projects

./: .gitignore  pyproject.toml
Email_Automator/: main.py
Email_Automator/Input/Letters/: starting_letter.txt
NATO Alphabet/: main.py
NATO_Alphabet/: main.py
Pong_Game/: ball.py  main.py  paddle.py  scoreboard.py
Snake_Game/: food.py  main.py  scoreboard.py  snake.py
Turtle Crossing/: car_manager.py  main.py  player.py  scoreboard.py
Turtle_Crossing/: car_manager.py  main.py  player.py
USA_State_Guesser/: main.py
Unit_Converter/: arg_kwarg_test.py  main.py
